# tams_ur5_bartender

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cocktails.txt  kinect_ir_calibration.yaml  kinect_rgb_calibration.yaml  package.xml  pour_bottle_action_client.cpp  pour_bottle_action_server.cpp
action/: Cocktail.action  PourBottle.action
cadb_5000_tilted_base/: manifest
cocktails/: cocktails.txt  convert.py
config/: cocktails.yaml
constraints_approximation_database/: arm_2017-03-14T16:36:47.495451.ompldb  arm_2017-03-16T11:12:18.108581.ompldb  arm_2017-03-16T11:27:23.808044.ompldb  manifest
constraints_approximation_database_unlimited/: arm_2017-03-16T16:10:17.363185.ompldb  manifest
grasping/: grab_bottle_test.cpp
launch/: coordinator.launch  hardware_demo.launch  manipulation.launch  project16.launch  simulationProject16.launch
pouring/: pour_bottle_test.cpp
project16/: CMakeLists.txt
project16/launch/: project16.launch  simulation.launch
rviz/: startup.rviz
src/: GrabBottleActionServer.py  bottle.py  construct_constraint_database.cpp  grab_pour_place.cpp  pour_bottle_action_client.cpp  pour_bottle_action_server.cpp  tams_pr16_drink_chooser.cpp
src/con_motion/: con_motion_test.cpp
src/grasping/: grab_bottle_demo.cpp  grab_bottle_test.cpp  grasp_planning_service.cpp
src/pouring/: pour_bottle_test.cpp
src/ros/: FindObjectROS.cpp
tams_ur5_bartender/: CMakeLists.txt  package.xml
tams_ur5_bartender/launch/: bartender.launch  bartender_astra.launch  simulation.launch  tams_ur5_setup_floor_astra.launch
tams_ur5_bartender_coordination/: CMakeLists.txt  package.xml
tams_ur5_bartender_coordination/cocktails/: cocktails.txt  convert.py
tams_ur5_bartender_coordination/config/: cocktails.yaml
tams_ur5_bartender_coordination/launch/: coordination.launch
tams_ur5_bartender_coordination/rviz/: startup.rviz
tams_ur5_bartender_coordination/src/: bartender_coordination.cpp  tams_pr16_drink_chooser.cpp
tams_ur5_bartender_gui/: CMakeLists.txt  bower.json  package.json  package.xml
tams_ur5_bartender_gui/launch/: rosbridge.launch
tams_ur5_bartender_gui/nbproject/: customs.json  project.properties  project.xml
tams_ur5_bartender_gui/nbproject/private/: private.xml
tams_ur5_bartender_gui/public_html/: index.html
tams_ur5_bartender_gui/public_html/css/: main.css
tams_ur5_bartender_gui/public_html/js/: main.js  roslib_simulator.js
tams_ur5_bartender_gui/src/: browser.sh
tams_ur5_bartender_image_processing/: CMakeLists.txt  package.xml
tams_ur5_bartender_image_processing/config/: bottles.yaml  find_object_2d.ini
tams_ur5_bartender_image_processing/launch/: astra.launch  fullStartForTesting.launch  publishDemoBottles.launch  regular.launch  regular_kinect2.launch
tams_ur5_bartender_image_processing/rviz/: startup.rviz
tams_ur5_bartender_image_processing/src/: bottle_publisher.cpp  bottle_recognition.cpp  demo_bottle_publisher.cpp  marker_publisher.cpp  tams_pr16_bar_objects.cpp  tams_pr16_demo_bottle_publisher.cpp
tams_ur5_bartender_kinect_calibration/: CMakeLists.txt  package.xml
tams_ur5_bartender_manipulation/: CMakeLists.txt  package.xml
tams_ur5_bartender_manipulation/cadb_15000/: arm_2017-03-22T13:21:31.197257.ompldb  manifest
tams_ur5_bartender_manipulation/cadb_5000_tilted_base/: arm_2017-04-26T12:50:45.472134.ompldb
tams_ur5_bartender_manipulation/constraints_approximation_database/: arm_2017-03-16T11:00:17.942716.ompldb  arm_2017-03-16T11:03:14.423777.ompldb  arm_2017-03-16T11:08:57.137714.ompldb  arm_2017-03-16T11:09:29.595241.ompldb  arm_2017-03-16T11:18:13.386904.ompldb  arm_2017-03-16T11:18:49.334049.ompldb  arm_2017-03-16T11:21:39.802892.ompldb
tams_ur5_bartender_manipulation/launch/: manipulation.launch  moveit_demo_mode.launch
tams_ur5_bartender_manipulation/src/: grab_pour_place.cpp  pour_bottle_action_client.cpp  pour_bottle_action_server.cpp
tams_ur5_bartender_manipulation/src/con_motion/: con_motion_test.cpp
tams_ur5_bartender_manipulation/src/experiments/: pouring_task_construction.cpp
tams_ur5_bartender_manipulation/src/grasping/: grab_bottle_demo.cpp  grab_bottle_test.cpp  grasp_planning_service.cpp
tams_ur5_bartender_manipulation/src/pouring/: pour_bottle_test.cpp
tams_ur5_bartender_msg/: CMakeLists.txt  package.xml
tams_ur5_bartender_msg/msg/: BarCollisionObjectArray.msg
tams_ur5_bartender_msgs/: CMakeLists.txt  package.xml
tams_ur5_bartender_msgs/msg/: CocktailList.msg
